--- a/idea_plugin/build.gradle
+++ b/idea_plugin/build.gradle
@@ -19,11 +19,12 @@ plugins {
 }
 
 repositories {
+  mavenLocal()
   mavenCentral()
 }
 
 ext {
-  googleJavaFormatVersion = '1.7'
+  googleJavaFormatVersion = '2.0'
 }
 
 apply plugin: 'org.jetbrains.intellij'
@@ -38,7 +39,7 @@ intellij {
 patchPluginXml {
   pluginDescription = "Formats source code using the google-java-format tool. This version of " +
                       "the plugin uses version ${googleJavaFormatVersion} of the tool."
-  version = "${googleJavaFormatVersion}.0.1"
+  version = "${googleJavaFormatVersion}.3"
   sinceBuild = '173'
 }
 
